--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -5,19 +5,19 @@
   tasks:
     - name: Check whether Google Chrome is installed
       ansible.builtin.command: google-chrome --version
-      register: CHROME_INSTALLED
+      register: chrome_installed
       changed_when: false
       ignore_errors: True
 
     - name: Check OS version
       ansible.builtin.command: cat /etc/redhat-release
-      register: OS_VERSION
+      register: os_version
       changed_when: false
 
     - name: Make sure Google Chrome is installed
       ansible.builtin.debug:
-        var: CHROME_INSTALLED
+        var: chrome_installed
 
     - name: Show OS version
       ansible.builtin.debug:
-        var: OS_VERSION
+        var: os_version
